assets/css/style.css
html {
    height: 100%
}

body {
    background-image: url("../images/connectwork.png");
    height: 100%;
    position: relative;
}

#header {
    background-color: #666666;
}

#shadow {
    background-color: black;
    border-radius: 5px;
    border: 3px solid black;
    display: table;
    text-align: center
}

h1 {
    text-align: center;
    background-color: #207EE8;
    border-radius: 5px;
    font-family: 'Georgia', Times, Times New Roman, serif;
    display: table-cell;
    vertical-align: middle
}

li {
    display: inline-block;
    letter-spacing: 1px
}

#main {
    background: white;
    margin: 2%;
    margin-bottom: 70px;
    padding-bottom: 25px;
    border-radius: 5px;
}

h2 {
    font-family: 'Georgia', Times, Times New Roman, serif;
    color: #207EE8;
    padding: 20px

}

#portait {
    padding: 20px;
    margin-right: 20px;
    overflow: auto;
}

aside {
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    font-size: 16px;
    line-height: 24px;
    letter-spacing: 1px;
    margin: 0 20px 20px 20px;
}

img {
    margin: 20px auto;
    border: 1px solid black;
    border-radius: 5px;
    width: 100%;
}

.thumbnail {
    width: 100%;
    position: relative;
}

.label {
    height: 60px;
    width: 100%;
    bottom: 0px;
    background-color: #207EE8;
    position: absolute;
    text-align: center;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    line-height: 60px;
    color: black;
    border-radius: 5px;
}

form {
    margin: 20px
}

i {
    margin: 25px;
    color: black;
}

.blueBar {
    height: 10px;
    background-color: #207EE8;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
}

footer {
    position: fixed;
    width: 100%;
    height: 60px;
    text-align: center;
    line-height: 60px;
    background-color: #666666;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    font-size: 10px;
    left: 0;
    bottom: 0
}

